resolve chrome issues

--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr-FR">
+<html>
   <head>
     <meta charset="utf-8">
     <title>Jekyll</title>
+
     <meta name="description" content="Groupe de metal lyonnais">
     <meta name="keywords" content="groupe, metal, lyon, heavy, hard">
     <meta http-equiv="content-language" content="fr-FR" />
     <meta name="language" content="fr-FR" />
     <!-- Import Main Font -->
+    <style media="screen">
+    @font-face {
+      font-family: 'ShadowsOfSecurity';
+      src: url('../fonts/ShadowsOfSecurity.ttf') format("ttf");
+      src: url('../fonts/ShadowsOfSecurity.eot') format("eot");
+      src: url('../fonts/ShadowsOfSecurity.svg') format("svg");
+      src: url('../fonts/ShadowsOfSecurity.woff') format("woff");
+      src: url('../fonts/ShadowsOfSecurity.woff2') format("woff2");
+      font-weight:normal;
+      font-style:normal;
+    }
+    @font-face {
+      font-family: 'NorthwoodHigh';
+      src: url('../fonts/NorthwoodHigh.ttf') format("ttf");
+      src: url('../fonts/NorthwoodHigh.eot') format("eot");
+      src: url('../fonts/NorthwoodHigh.svg') format("svg");
+      src: url('../fonts/NorthwoodHigh.woff') format("woff");
+      src: url('../fonts/NorthwoodHigh.woff2') format("woff2");
+      font-weight:normal;
+      font-style:normal;
+    }
+    </style>
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="fonts/font-awesome/font-awesome.css">
     <!-- Materialize CSS -->
     <link rel="stylesheet" href="dist/pluginBundle.min.css">
     <!-- Custom CSS -->
